2023-02-09  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev, for TL24.

2024-02-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h, kanjicnv.c, ptexenc/kanjicnv.h:
	Add to support ISO-8859 in guessing input file encodings.
	* ptekf.c: Add a new simple encoding conversion utility "ptekf"
	to analyze file encoding conversion procedure.
	* tests/ptekf-{smoke,guess,conv}.test,
	tests/enc-amb0.bib-{euc,euc-utf8,jis,sjis,sjis-utf8,utf8},
	tests/enc-amb1.bib-{euc,jis,sjis,sjis-utf8,utf8},
	tests/enc-amb2,bib_{euc,sjis}-utf8,
	tests/enc-{euc,jis,sjis}.bib-utf8,
	tests/enc-utf8{,a,b}.bib-{euc,jis,sjis,utf8}:
	New tests to guess/convert encoding.
	https://github.com/texjporg/tex-jp-build/issues/142
	* configure.ac, Makefile.am: Adjust.
	* version.ac, COPYRIGHT: Update copyright year.
	* version.ac: Bump to 1.4.5/dev.

2023-09-11  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* unicode.c (UPTEXtoUCS): if >=UCS_MAX not >UCS_MAX.

2023-02-09  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev, for TL23.

2023-01-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h:
	Remove unused function ptenc_get_command_line_args().
	* version.ac, COPYRIGHT: Update copyright year.

2022-12-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptexenc.c, ptexenc/ptexenc.h:
	Add a new function ptenc_conv_first_line()
	to accept file names with JIS X 0208 characters
	in `(e)(u)ptex --kanji-internal={euc,sjis}`.
	https://github.com/texjporg/tex-jp-build/issues/136
	* version.ac: Bump to 1.4.3/dev.

2022-09-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c: Skip guessing file encoding if input is from pipe.
	https://github.com/texjporg/tex-jp-build/issues/148

2022-09-01  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptexenc.c: Initialize infile_enc_auto only when this variable
	is first used (input_line2).
	https://github.com/texjporg/tex-jp-build/pull/144

2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
