@@ -56,14 +56,14 @@ static void show_version(void)
 
 static void show_usage(void)
 {
-  printf("Usage: ptekf -[OPTION] [--] in_file1 [in_file2 ..]\n");
-  printf("  j/s/e/u  Specify output encoding ISO-2022-JP, Shift_JIS, EUC-JP, UTF8\n");
-  printf("  J/S/E/U  Specify input encoding ISO-2022-JP, Shift_JIS, EUC-JP, UTF8\n");
+  printf("Usage: ptekf -[OPTION] [--] in_file1 [in_file2 ...]\n");
+  printf("  j/s/e/u  Specify output encoding ISO-2022-JP, Shift_JIS, EUC-JP, UTF-8\n");
+  printf("  J/S/E/U  Specify input encoding ISO-2022-JP, Shift_JIS, EUC-JP, UTF-8\n");
   printf("  G        Guess the input encoding and output to stdout or files\n");
   printf("  --guess    -g  Guess the input encoding (no conversion)\n");
+  printf("  --buffer   -b  Output internal buffer without code conversion\n");
   printf("  --version  -v  Print version number\n");
   printf("  --help     -h  Print this help\n");
-  printf("  --buffer   -b  Output internal buffer without code conversion\n");
   printf("Default input/output encoding depends on kpathsearch parameters PTEX_KANJI_ENC, guess_input_kanji_encoding\n");
   printf("\nEmail bug reports to %s.\n", BUG_ADDRESS);
 }
