@@ -3,10 +3,6 @@
 	* COPYRIGHT,
 	* main.c: 2024.
 
-2024-02-05  Karl Berry  <karl@tug.org>
-
-	* main.c: 
-
 2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tests/mendex.test:
